fix: problemas de subsystem
